[gd_scene load_steps=6 format=3 uid="uid://0impxinhvi8y"]

[ext_resource type="Theme" uid="uid://n3ns3n53r5ve" path="res://Assets/Resource/Themes/pixel/pixel_theme.tres" id="1_36gk1"]
[ext_resource type="Script" path="res://scene/phone.gd" id="1_olc86"]
[ext_resource type="Material" uid="uid://cw8kovgeqm575" path="res://Assets/Resource/Shaders/black_white_material.tres" id="1_oukie"]
[ext_resource type="Texture2D" uid="uid://d0un2g7uip1rf" path="res://Assets/Textures/phone/phone2.png" id="4_o8kyb"]
[ext_resource type="Texture2D" uid="uid://dp75oa8ghr1n6" path="res://Assets/Textures/phone/phone4.png" id="5_ed5fx"]

[node name="Phone" type="Control" node_paths=PackedStringArray("number_grid", "number_contain")]
material = ExtResource("1_oukie")
layout_mode = 3
anchors_preset = 0
offset_right = 304.0
offset_bottom = 540.0
mouse_filter = 2
theme = ExtResource("1_36gk1")
script = ExtResource("1_olc86")
number_grid = NodePath("MarginContainer/NumberGrid")
number_contain = NodePath("CenterContainer2/NumberContain")

[node name="ReferenceRect" type="ReferenceRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
border_width = 2.0

[node name="ColorRect" type="ColorRect" parent="."]
use_parent_material = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 20.0
offset_bottom = -36.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="CenterContainer2" type="CenterContainer" parent="."]
use_parent_material = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -195.0
offset_bottom = -160.0
grow_horizontal = 2
grow_vertical = 2

[node name="NumberContain" type="Label" parent="CenterContainer2"]
use_parent_material = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "2332"
vertical_alignment = 1

[node name="MarginContainer" type="CenterContainer" parent="."]
use_parent_material = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -127.0
offset_bottom = 123.0
grow_horizontal = 2
grow_vertical = 2

[node name="NumberGrid" type="GridContainer" parent="MarginContainer"]
use_parent_material = true
custom_minimum_size = Vector2(204, 250)
layout_mode = 2
columns = 3
metadata/_edit_lock_ = true

[node name="1" type="Button" parent="MarginContainer/NumberGrid"]
use_parent_material = true
custom_minimum_size = Vector2(54, 54)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_type_variation = &"RoundButton"
text = "1"

[node name="2" type="Button" parent="MarginContainer/NumberGrid"]
use_parent_material = true
custom_minimum_size = Vector2(54, 54)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_type_variation = &"RoundButton"
text = "2"

[node name="3" type="Button" parent="MarginContainer/NumberGrid"]
use_parent_material = true
custom_minimum_size = Vector2(54, 54)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_type_variation = &"RoundButton"
text = "3"

[node name="4" type="Button" parent="MarginContainer/NumberGrid"]
use_parent_material = true
custom_minimum_size = Vector2(54, 54)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_type_variation = &"RoundButton"
text = "4"

[node name="5" type="Button" parent="MarginContainer/NumberGrid"]
use_parent_material = true
custom_minimum_size = Vector2(54, 54)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_type_variation = &"RoundButton"
text = "5"

[node name="6" type="Button" parent="MarginContainer/NumberGrid"]
use_parent_material = true
custom_minimum_size = Vector2(54, 54)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_type_variation = &"RoundButton"
text = "6"

[node name="7" type="Button" parent="MarginContainer/NumberGrid"]
use_parent_material = true
custom_minimum_size = Vector2(54, 54)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_type_variation = &"RoundButton"
text = "7"

[node name="8" type="Button" parent="MarginContainer/NumberGrid"]
use_parent_material = true
custom_minimum_size = Vector2(54, 54)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_type_variation = &"RoundButton"
text = "8"

[node name="9" type="Button" parent="MarginContainer/NumberGrid"]
use_parent_material = true
custom_minimum_size = Vector2(54, 54)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_type_variation = &"RoundButton"
text = "9"

[node name="#" type="Button" parent="MarginContainer/NumberGrid"]
use_parent_material = true
custom_minimum_size = Vector2(54, 54)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_type_variation = &"RoundButton"
text = "#"

[node name="0" type="Button" parent="MarginContainer/NumberGrid"]
use_parent_material = true
custom_minimum_size = Vector2(54, 54)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_type_variation = &"RoundButton"
text = "0"

[node name="DeleteButton" type="Button" parent="MarginContainer/NumberGrid"]
use_parent_material = true
custom_minimum_size = Vector2(54, 54)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_type_variation = &"RoundButton"
text = "del"

[node name="CenterContainer" type="CenterContainer" parent="."]
use_parent_material = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 130.0
offset_bottom = 184.0
grow_horizontal = 2
grow_vertical = 2

[node name="AnswerButton" type="TextureButton" parent="CenterContainer"]
use_parent_material = true
custom_minimum_size = Vector2(54, 54)
layout_mode = 2
texture_normal = ExtResource("4_o8kyb")
texture_pressed = ExtResource("5_ed5fx")
texture_disabled = ExtResource("5_ed5fx")
ignore_texture_size = true
stretch_mode = 5

[node name="BackButton" type="TextureButton" parent="."]
visible = false
layout_mode = 0
offset_left = -76.0
offset_top = 7.0
offset_right = -41.0
offset_bottom = 42.0
ignore_texture_size = true
stretch_mode = 5

[connection signal="pressed" from="MarginContainer/NumberGrid/DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="pressed" from="CenterContainer/AnswerButton" to="." method="_on_answer_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
